# k9rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs
src/k8s/: client.rs  mod.rs  runtime.rs
src/model/: detail.rs  mod.rs  port_forward.rs  resources.rs  table.rs
src/ui/: context_picker.rs  detail_panel.rs  header.rs  mod.rs  namespace_picker.rs  port_forward_dialog.rs  port_forward_list.rs  resource_picker.rs  resource_table.rs  sidebar.rs  status_bar.rs  theme.rs
