[package]
name = "k9rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework (Zed's GPU-accelerated UI)
gpui = "0.2"

# Kubernetes client
kube = { version = "0.98", features = ["runtime", "client", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Time formatting
chrono = "0.4"
