[package]
name = "k9rs"
version = "0.1.0"
edition = "2021"
description = "A GPU-accelerated Kubernetes CLI manager inspired by k9s, built with GPUI"
license = "MIT"
repository = "https://github.com/madchicken/k9rs"
homepage = "https://github.com/madchicken/k9rs"
keywords = ["kubernetes", "k8s", "cli", "tui", "gpui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# UI Framework (Zed's GPU-accelerated UI)
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

# Kubernetes client
kube = { version = "0.98", features = ["runtime", "client", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Time formatting
chrono = "0.4"
